[knives] updated the landing page, added the split test for free

--- a/app/views/courses/_knife-sharpening_a.haml
+++ b/app/views/courses/_knife-sharpening_a.haml
@@ -34,13 +34,16 @@
 .container
   .row.section
     .span6
-      =image_tag 'http://placehold.it/500x300/cccccc/dddddd&text=' 
+      =image_tag 'https://www.filepicker.io/api/file/NcFevaslSnmYJUlJfvXP/convert?fit=max&w=600&cache=true' 
     .span6
       %h2 What you'll learn
-      %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-      %p Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      %h2.section Knives
-      %p There are many knives like it, but this one is mine. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      %ul 
+        %li The list of essential knives every cook should own
+        %li The pros and cons of expensive knives
+        %li How to use waterstones to sharpen a blade
+        %li How to polish a blade until razor sharp
+        %li How to keep your knives sharp edge with honing
+        %li The science behind how knives cut and slice food
 
 %hr
 
