--- a/app/views/courses/_course_enrollment_box.html.haml
+++ b/app/views/courses/_course_enrollment_box.html.haml
@@ -2,7 +2,7 @@
   - if current_user.course_ids.include?(@course.id)
     = where_user_left_off_in_course(@course, current_user, 'btn btn-primary btn-large')
   - else
-    %h2 Enroll now for free
+    %h2= ab_test "free or not", "Enroll now", "Enroll now for free"
     We'll keep track of your course progress and you can earn badges and upload your creations as you learn.
     .section 
       = form_tag enroll_course_path(@course) do
@@ -14,7 +14,7 @@
 
 - else
   .flat-form.enrollment-wizard
-    %h2 Enroll for free now
+    %h2= ab_test "free or not", "Enroll now", "Enroll now for free"    
     We'll keep track of your course progress and you can earn badges and upload your creations as you learn.
     .section.hide.enroll-section
       = link_to 'Enroll', 'javascript:void(0);', class: 'btn btn-primary btn-large btn-block enroll-section-btn'
