[polls] use slug

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -51,7 +51,7 @@
                   %ul.dropdown-menu
                     .dropdown-background
                     %li= link_to 'Forum', 'http://forum.chefsteps.com'
-                    %li= link_to 'Vote For New Content', poll_url(1)
+                    %li= link_to 'Vote For New Content', poll_url(Poll.first)
                 %li
                   .nav-item-border
                   = link_to 'Community', 'http://forum.chefsteps.com'
