[madlib-split] added a third option

--- a/app/views/home/_madlib.html.haml
+++ b/app/views/home/_madlib.html.haml
@@ -17,7 +17,7 @@
                 &#46;&nbsp;&nbsp;
               .madlib-item
                 I want to 
-                = ab_test "counter_split", "learn", "join more than 10,000 others and learn"
+                = ab_test "counter_split", "learn", "join more than 10,000 others and learn", "join more than 12,477 others and learn"
                 how to be a better cook.
               .madlib-item.hide#madlib-password-wrapper
                 Please set my password to
