[polls nav] passing spec

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -51,7 +51,7 @@
                   %ul.dropdown-menu
                     .dropdown-background
                     %li= link_to 'Forum', 'http://forum.chefsteps.com'
-                    %li= link_to 'Vote For New Content', poll_url(Poll.first)
+                    %li= link_to 'Vote For New Content', poll_url('vote-for-new-content')
                 %li
                   .nav-item-border
                   = link_to 'Shop', 'http://store.chefsteps.com'
