[polls] styling update

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -69,6 +69,8 @@
   @include raleway
 
 .poll-item-voters
+  float: left
+  width: 100%
   .poll-item-voter
     position: relative
     float: left
