--- a/app/assets/stylesheets/media_objects.css.sass
+++ b/app/assets/stylesheets/media_objects.css.sass
@@ -134,7 +134,10 @@
     .media-box-3-footer
       font-weight: 500
       .footer-left
+        float: left
         text-transform: uppercase
+      .footer-right
+        float: right
   &:hover
     border-color: $orange
     cursor: pointer
