--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -591,9 +591,9 @@ a:hover
   .ingredient-title
     width: 61%
   .quantity-group
-    width: 29%
+    width: 28%
   .unit
-    width: 4%
+    width: 9%
 
   .ingredient-table-head
     width: 100%
@@ -1392,7 +1392,7 @@ csingredienteditpair
   margin-bottom: 15px
 
 .disabled-section
-  color: $light-gray
+  color: #aaa
 
 
 // Making this match h1. I tried @including h1 but that was a no go.
@@ -1412,8 +1412,6 @@ csingredienteditpair
   font-family: 'Raleway', sans-serif
   font-weight: bold
   -webkit-font-smoothing: antialiased
-
-
 
 .fake-link, .fakefocus
   color: #0088cc
