--- a/app/views/client_views/_ingredient_edit_pair.html.haml
+++ b/app/views/client_views/_ingredient_edit_pair.html.haml
@@ -37,4 +37,4 @@
       .select-readout(ng-class="{fakefocus: unitSelectHasFocus}")
         {{ai.unit}}
         %i.icon-caret-down
-      %select(type="text" ng-model="ai.unit" required="true" ng-options="u for u in ['g', 'kg', 'ea', 'a/n', 'recipe']" ui-event='{focus : "unitSelectHasFocus = true", blur: "unitSelectHasFocus = false"}')
+      %select(type="text" ng-model="ai.unit" required="true" ng-options="u for u in allUnitNames()" ui-event='{focus : "unitSelectHasFocus = true", blur: "unitSelectHasFocus = false"}')
