--- a/app/views/gallery/index.html.haml
+++ b/app/views/gallery/index.html.haml
@@ -15,7 +15,7 @@
             %form.navbar-search.relative(ng-click="collapse_filters = true")
               %input.search-query(type="search" placeholder="Search..." ng-model="filters.search_all")
               %a.clear-search(ng-click="filters.search_all = ''" ng-show="filters.search_all || '' != ''")
-                %i.icon-remove-circle
+                %i.icon-remove
 
             %li.relative(ng-mouseenter="collapse_filters = false" ng-mouseleave="collapse_filters = true")
               .filter-collapser(ng-click="collapse_filters = ! collapse_filters")
@@ -25,7 +25,7 @@
               .current-filter(ng-repeat="(k, f) in nonDefaultFilters()")
                 {{f.name}}
                 %span.reset-filter(ng-click="resetFilter(k)")
-                  %i.icon-remove-circle
+                  %i.icon-remove
               .filters-group(ng-show="!collapse_filters" data-ng-animate="'filters'" )
                 .btn-group.first-separate
                   %button.btn.btn-checkbox(ng-repeat="choice in typeChoices" ng-model="filters.activity_type" btn-radio="{{choice}}")
@@ -33,12 +33,12 @@
                 .btn-group.first-separate
                   %button.btn.btn-checkbox(ng-repeat="choice in difficultyChoices" ng-model="filters.difficulty" btn-radio="{{choice}}")
                     {{choice.name}}
-                -if can? :update, Activity
+                .btn-group
+                  %button.btn.btn-checkbox(ng-repeat="choice in generatorChoices" ng-model="filters.generator" btn-radio="{{choice}}")
+                    {{choice.name}}
+                -if can? :update, User
                   .btn-group
                     %button.btn.btn-checkbox(ng-repeat="choice in publishedStatusChoices" ng-model="filters.published_status" btn-radio="{{choice}}")
-                      {{choice.name}}
-                  .btn-group
-                    %button.btn.btn-checkbox(ng-repeat="choice in generatorChoices" ng-model="filters.generator" btn-radio="{{choice}}")
                       {{choice.name}}
 
           %ul.nav.browse-group.pull-right(ng-click="collapse_filters = true")
@@ -65,6 +65,8 @@
             .media-box-3-footer
               .footer-left
                 {{activity.difficulty}}
+              .footer-right(ng-show="activity.creator.id != nil")
+                By {{activity.creator.name}}
 
   .row
     .span2.offset5
