[assemblies] dynamic path

--- a/app/views/assemblies/index.html.haml
+++ b/app/views/assemblies/index.html.haml
@@ -1,3 +1,2 @@
-= request.path
 - @assemblies.each do |assembly|
-  = link_to assembly.title, assembly
+  = link_to assembly.title, assembly_type_path(assembly)
