--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -3,12 +3,13 @@
 .poll-item
   width: 100%
   //height: 80px
-  padding: 20px 0px 
+  padding: 0px 0px 20px 0px 
   border-top: 1px solid #ccc
   float: left
 .poll-item-vote-up
   width: 7% 
   margin-right: 1%
+  margin-top: 15px
   float: left
 
 .poll-item-text
@@ -21,6 +22,7 @@
     &:hover
       cursor: pointer
 .poll-item-sharing
+  margin-top: 15px
   width: 9%
   margin-left: 1%
   float: left
@@ -30,6 +32,7 @@
   width: 9%
   margin-left: 1%
   float: left
+  margin-top: 15px
 
 .poll-item-btn
   @include raleway
