[polls] styling updates

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -12,7 +12,7 @@
       border: 1px solid black
       border-radius: 5px
       float: right
-      padding: 4%
+      padding: 3% 5% 5%
       height: 40px
       .poll-header-votes-count
         font-size: 60px
@@ -23,6 +23,7 @@
         font-size: 24px
         line-height: 20px
         padding-top: 5px
+        margin-left: 5px
         .poll-header-votes-subtext
           font-size: 10px
 
