--- a/app/views/shared/_activity.html.haml
+++ b/app/views/shared/_activity.html.haml
@@ -1,35 +1,30 @@
-.row-fluid
-  %h2.course-activity-header= activity.title.html_safe
-
-.row-fluid
-  .span12.section
-    .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject", :csenforceaspect => true}
+.row
+  .span6
+    .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
       - if activity.youtube_id?
-        .noprint
-          - if params[:autoplay]
-            %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url(activity.youtube_id, 1)}
-          - else
-            %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url(activity.youtube_id)}
+        %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url(activity.youtube_id)}
       - elsif activity.image_id?
         = image_tag filepicker_activity_hero_image(activity.image_id), alt: activity.title, title: activity.title, itemprop: 'image'
       - elsif activity.featured_image_id?
         = image_tag filepicker_activity_hero_image(activity.featured_image_id), alt: activity.title, title: activity.title, itemprop: 'image'
-
-.row-fluid
-  .span12
     - if activity.description?
       .section
         :markdown
           #{apply_shortcodes(activity.description)}
     - if activity.ingredients.any?
-      / .section
-      /   .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
-      /     .well(ng-show="activity.ingredients.length" )
-      /       = render 'ingredients_list', ingredients: activity.ingredients, source: "activity"
-      .section
-        .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
-          .well
-            = render 'old_ingredients_list', ingredients: activity.ingredients, source: "activity"
+      .activity-ingredients-list#full-ingredients-list{data: {target: ''}}
+        .well
+          %table.ingredients{:itemprop => "ingredients"}
+            %thead
+              %tr
+                %th#ingredient Ingredient
+                %th#quantity{colspan: 2}
+                  %a.change_units{title: "Click to change units"} Quantity
+                  %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
+                    %i.icon-question-sign
+            %tbody
+              - activity.ingredients.each do |ingredient|
+                = render '/activities/old_ingredient_row', ingredient: ingredient
     - if activity.yield.present?
       .section
         %h4 Yield
@@ -41,19 +36,18 @@
     - if activity.required_equipment.any?
       .section
         %h4 Equipment and Materials
-        = render 'equipment_list', equipment: activity.required_equipment
+        = render '/activities/equipment_list', equipment: activity.required_equipment
     - if activity.optional_equipment.any?
       .section
         %h4 Optional Equipment
-        = render 'equipment_list', equipment: activity.optional_equipment
+        = render '/activities/equipment_list', equipment: activity.optional_equipment
     - if activity.used_in_activities.published.any?
       .section
         %h4 Used In
         %ul
           - activity.used_in_activities.published.each do |activity|
             %li= link_to activity.title.html_safe, activity
-.row-fluid
-  .span12.section
+  .span6
     .ordered-steps{:itemprop => "recipeInstructions"}
       - step_number = 0
       - activity.steps.each_with_index do |step,index|
@@ -68,14 +62,22 @@
               %h4= step.title
             - if step.ingredients.any?
               .step-ingredients-source.well
-                / = render 'ingredients_list', ingredients: step.ingredients
-                = render 'old_ingredients_list', ingredients: step.ingredients, source: 'step'
+                .activity-ingredients-list#full-ingredients-list{data: {target: ''}}
+                  .well
+                    %table.ingredients{:itemprop => "ingredients"}
+                      %thead
+                        %tr
+                          %th#ingredient Ingredient
+                          %th#quantity{colspan: 2}
+                            %a.change_units{title: "Click to change units"} Quantity
+                            %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
+                              %i.icon-question-sign
+                      %tbody
+                        - activity.ingredients.each do |ingredient|
+                          = render '/activities/old_ingredient_row', ingredient: ingredient
             :markdown
               #{apply_shortcodes(step.directions)}
             .step-actions.btn-group
-              / -if step.ingredients.any?
-              /   .btn.step-action-item.step-ingredients.btn-primary
-              /     %i.icon-th-list
               - if step.image_id?
                 .btn.step-action-item.step-image-btn.btn-primary
                   %i.icon-picture
