--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -171,17 +171,18 @@
       .poll-header-votes-border
         width: 100%
         @include boxsizing
-        height: 40px
+        height: 32px
         .poll-header-votes-count
-          font-size: 40px
+          font-size: 32px
           line-height: inherit
         .poll-header-votes-text
           margin-left: 3%
           float: left
-          font-size: 18px
-          line-height: 18px
+          font-size: 16px
+          line-height: 16px
           padding: 0px
-          height: 18px
+          height: 16px
+          width: 65%
           .poll-header-votes-subtext
             float: left
             line-height: 5px
@@ -190,11 +191,11 @@
     font-size: 16px
 
   .poll-item-vote-up
-    width: 15%
-    margin-right: 1%
+    width: 16%
+    margin-right: 4%
     float: left
   .poll-item-text
-    width: 54%
+    width: 80%
     float: left
     h2
       font-size: 16px
@@ -205,14 +206,15 @@
       &:hover
         cursor: pointer
   .poll-item-sharing
-    width: 14%
+    width: 49%%
     margin-left: 1%
     float: left
     position: relative
 
   .poll-item-comments
-    width: 14%
-    margin-left: 1%
+    width: 49%
+    margin-left: 0%
+    margin-right: 1%
     float: left
 
   .poll-item-btn
