--- a/app/views/shared/_activity.html.haml
+++ b/app/views/shared/_activity.html.haml
@@ -1,8 +1,8 @@
 .row
   .span6.force-aspect-wrapper
-    .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
+    .embed-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
       - if activity.youtube_id?
-        %iframe.force-aspect{src: youtube_url(activity.youtube_id)}
+        %iframe(frameborder='0' allowfullscreen){src: youtube_url(activity.youtube_id)}
       - elsif activity.image_id?
         = image_tag filepicker_activity_hero_image(activity.image_id), alt: activity.title, title: activity.title, itemprop: 'image'
       - elsif activity.featured_image_id?
