--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -572,10 +572,6 @@ a:hover
     &:hover
       background: rgba(0, 128, 220, .2) !important
 
-
-
-
-
 .ingredients
 
   position: relative
@@ -593,12 +589,12 @@ a:hover
   .ingredient-title
     width: auto
     height:  auto
-    margin-right: 100px
+    margin-right: 120px
 
   .quantity-group
     position:  absolute
-    right:  44px
-    width:  50px
+    right:  52px
+    width:  70px
     text-align:  right
     bottom:  -2px
 
@@ -611,7 +607,7 @@ a:hover
     position: absolute
     right: 0px
     bottom:  -2px
-    width:  40px
+    width:  45px
     text-align:  left
 
   .ingredient-table-head
@@ -1369,8 +1365,8 @@ csequipmenteditpair, csingredienteditpair
       width: 100%
       max-width: 280px
 
-    select
-      height: 22px
+    .unit
+      margin-bottom: -10px
 
 csequipmenteditpair
   .action-button-group
