[polls] avatar margin update

--- a/app/assets/stylesheets/voting.css.sass
+++ b/app/assets/stylesheets/voting.css.sass
@@ -106,7 +106,7 @@
   .poll-item-voter
     position: relative
     float: left
-    margin-right: 5px
+    margin: 2px
     &:hover
       .poll-item-voter-tooltip
         display: block
