--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -597,6 +597,7 @@ a:hover
     width:  70px
     text-align:  right
     bottom:  -2px
+    overflow: visible
 
   .quantity-edit
     position: relative
@@ -1355,6 +1356,7 @@ csequipmenteditpair, csingredienteditpair
       width: auto
 
   .edit-pair-edit
+
     input, select
       display: inline-block
       @include boxsizing
