--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -3,6 +3,7 @@
 - content_for :description, @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe
 - content_for :canonical_link, activity_url(@activity) if @activity.id
 - content_for :keywords, @activity.tag_list.join(',')
+= render 'layouts/filepicker'
 %div(ng-model="activity.title" ng-init="activity.title = '#{@activity.title}'")
 %div(ng-model="activity.activity_type" ng-init="activity.activity_type = '#{@course.title} Course - #{@activity.activity_type.first}'")
 
