--- a/app/views/admin/assemblies/_form.html.haml
+++ b/app/views/admin/assemblies/_form.html.haml
@@ -13,4 +13,4 @@
   = f.actions
 
 #assembly_selection_data
-  #activities_selection_data{data: {:'activities-selection' =>Activity.where("title <> ''").order(:title).select('id, title').to_json}}
+  #activity_selection_data{data: {:'activity-selection' => Activity.where("title <> ''").order(:title).select('id, title').to_json}}
