--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -1,5 +1,5 @@
 - @body_tag_attributes = {:'ng-app' => "ChefStepsApp", :'ng-controller' => "ActivityController", :'ng-click' => "bodyClick()"}
-- content_for :title, "#{@course.title} Course - #{@activity.activity_type.first} - #{@activity.title.html_safe}"
+- content_for :title, "#{@activity.title.html_safe} - #{@activity.activity_type.first} - #{@course.title} Course"
 - content_for :description, @activity.description != "" ? @activity.description.html_safe : @activity.title.html_safe
 - content_for :canonical_link, activity_url(@activity) if @activity.id
 - content_for :keywords, @activity.tag_list.join(',')
