[avatars] for missing profile images

--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -9,7 +9,7 @@
       .row
         .span2
           .profile-image
-            = image_tag filepicker_circle_image(@user.image_id), class: 'img-circle'
+            = image_tag filepicker_circle_image(@user.profile_image_id), class: 'img-circle'
         .span10
           %h1= @user.name
 
