--- a/app/views/admin/assemblies/_assembly_inclusion_fields.html.haml
+++ b/app/views/admin/assemblies/_assembly_inclusion_fields.html.haml
@@ -4,4 +4,6 @@
   / = f.input :includable_id, as: :select, collection: Activity.all, input_html: { class: 'assembly_includable_id'}
   = f.input :position, input_html: { class: 'includable_position'}
   = f.hidden_field :_destroy
-  = link_to 'remove', '#', class: 'remove_fields'
+  = link_to '#', class: 'remove_fields' do
+    %i.icon-remove
+      remove
