--- a/app/views/admin/assemblies/_form.html.haml
+++ b/app/views/admin/assemblies/_form.html.haml
@@ -8,8 +8,9 @@
 
   %h2 Assembly Inclusions
   = link_to_add_fields "Add Assembly Inclusion", f, :assembly_inclusions
-  = f.semantic_fields_for :assembly_inclusions do |builder|
-    = render 'assembly_inclusion_fields', f: builder
+  #assembly_inclusions
+    = f.semantic_fields_for :assembly_inclusions do |builder|
+      = render 'assembly_inclusion_fields', f: builder
   = f.actions
 
 #assembly_selection_data
