--- a/app/views/user_profiles/show.html.haml
+++ b/app/views/user_profiles/show.html.haml
@@ -7,7 +7,7 @@
   .row-fluid
     .container
       .row
-        .span2
+        .span2.profile-image-wrapper
           .profile-image
             = image_tag filepicker_circle_image(@user.profile_image_id), class: 'img-circle'
         .span10
