--- a/app/assets/stylesheets/alert.css.sass
+++ b/app/assets/stylesheets/alert.css.sass
@@ -20,6 +20,12 @@
     -webkit-animation-fill-mode: forwards
     -webkit-animation-name: notification
     -webkit-animation-delay: 1s
+    -moz-animation-duration: .4s
+    -moz-animation-iteration-count: 1
+    -moz-animation-timing-function: ease-in-out
+    -moz-animation-fill-mode: forwards
+    -moz-animation-name: notification
+    -moz-animation-delay: 1s
     opacity: 0
     transition: opacity 1s linear
   .close
@@ -49,6 +55,13 @@
   -webkit-animation-iteration-count: 1
   -webkit-animation-timing-function: ease-in-out
   -webkit-animation-fill-mode: forwards
+  -moz-animation-name: lblock
+  -moz-animation-delay: .2s
+  -moz-animation-duration: .5s
+  -moz-animation-delay: 1s
+  -moz-animation-iteration-count: 1
+  -moz-animation-timing-function: ease-in-out
+  -moz-animation-fill-mode: forwards
 
 @-webkit-keyframes lblock
   0%    
@@ -59,6 +72,20 @@
     background: #e25f25
 
 @-webkit-keyframes notification
+  0%    
+    display: none
+  100%
+    opacity: 1
+
+@-moz-keyframes lblock
+  0%    
+    width: 0
+    background: #df4b23
+  100%
+    width: 100%
+    background: #e25f25
+
+@-moz-keyframes notification
   0%    
     display: none
   100%
