[assembly] update description section

--- a/app/views/assemblies/projects_show.html.haml
+++ b/app/views/assemblies/projects_show.html.haml
@@ -27,7 +27,7 @@
                   .section
                     = link_to 'Get Started', '#', class: 'btn btn-large btn-primary input-block-level'
                 .span4
-                  .lead
+                  .section
                     = @project.description
             .span4
               %h4 All Ingredients
