--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -29,9 +29,9 @@
     = f.input :description, label: "Description (Markdown or HTML)"
     = f.input :youtube_id
     %li
-      = render 'filepicker_group', label_text: "Hero Image", param: "activity[image_id]", value: @activity.image_id
+      = render '/shared/filepicker_group', label_text: "Hero Image", param: "activity[image_id]", value: @activity.image_id
     %li
-      = render 'filepicker_group', label_text: "Featured Image", param: "activity[featured_image_id]", value: @activity.featured_image_id
+      = render '/shared/filepicker_group', label_text: "Featured Image", param: "activity[featured_image_id]", value: @activity.featured_image_id
     = f.input :transcript
     = f.input :timing
     = f.input :difficulty, as: :select, collection: Activity.difficulty_enum
