--- a/app/views/admin/assemblies/_form.html.haml
+++ b/app/views/admin/assemblies/_form.html.haml
@@ -17,3 +17,5 @@
 #assembly_selection_data
   #activity_selection_data{data: {:'activity-selection' => Activity.where("title <> ''").order(:title).select('id, title').to_json}}
   #quiz_selection_data{data: {:'quiz-selection' => Quiz.where("title <> ''").order(:title).select('id, title').to_json}}
+
+= render 'layouts/filepicker'
