[knives] update typo on landing

--- a/app/views/courses/_knife-sharpening_a.haml
+++ b/app/views/courses/_knife-sharpening_a.haml
@@ -42,7 +42,7 @@
         %li The pros and cons of expensive knives
         %li How to use waterstones to sharpen a blade
         %li How to polish a blade until razor sharp
-        %li How to keep your knives sharp edge with honing
+        %li How to keep your knife's sharp edge with honing
         %li The science behind how knives cut and slice food
 
 %hr
