--- a/app/views/admin/assemblies/_form.html.haml
+++ b/app/views/admin/assemblies/_form.html.haml
@@ -3,7 +3,7 @@
     = f.input :assembly_type, as: :select, collection: Assembly::ASSEMBLY_TYPE_SELECTION
     = f.input :title
     = f.input :description
-    = render '/shared/filepicker_group', label_text: "Image", param: "activity[image_id]", value: @assembly.image_id
+    = render '/shared/filepicker_group', label_text: "Image", param: "assembly[image_id]", value: @assembly.image_id
     / = f.input :image_id
     = f.input :youtube_id
 
